--- a/arche-react/en/privacy-policy.html
+++ b/arche-react/en/privacy-policy.html
@@ -146,191 +146,335 @@
 </div>
 
 
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="cookies">
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                       <h2 class="section-header-title" id="cookies">
                     {{ element_6.title }}&nbsp;<a class="anchor-link" href="{{ element_6.title_url }}" aria-label="{{ element_6.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-             {{ element_6.content }}
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_6.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="matomo">
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                        <h2 class="section-header-title" id="matomo">
                     {{ element_7.title }}&nbsp;<a class="anchor-link" href="{{ element_7.title_url }}" aria-label="{{ element_7.title_url_text }}">#</a>
                    
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-            {{ element_7.content }}
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_7.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="opting-out-of-website-tracking">
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                       <h2 class="section-header-title" id="opting-out-of-website-tracking">
                     {{ element_8.title }}&nbsp;<a class="anchor-link" href="{{ element_8.title_url }}" aria-label="{{ element_8.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-            {{ element_8.content }}
-            <div style="align-items:center;display:flex;">
-                <span id="matomo-opt-text">.</span>
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_8.content }}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="third-parties-to-whom-personal-data-is-disclosed">
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                      <h2 class="section-header-title" id="third-parties-to-whom-personal-data-is-disclosed">
                     {{ element_9.title }}&nbsp;<a class="anchor-link" href="{{ element_9.title_url }}" aria-label="{{ element_9.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-             {{ element_9.content }}
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_9.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="security">
+
+
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                      <h2 class="section-header-title" id="security">
                     {{ element_10.title }}&nbsp;<a class="anchor-link" href="{{ element_10.title_url }}" aria-label="{{ element_10.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-            {{ element_10.content }}
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_10.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="how-to-access-rectify-and-delete-the-personal-data">
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                     <h2 class="section-header-title" id="how-to-access-rectify-and-delete-the-personal-data">
                     {{ element_11.title }}&nbsp;<a class="anchor-link" href="{{ element_11.title_url }}" aria-label="{{ element_11.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-           {{ element_11.content }} 
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_11.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="changes-to-this-privacy-policy">
+
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                     <h2 class="section-header-title" id="changes-to-this-privacy-policy">
                     {{ element_12.title }}&nbsp;<a class="anchor-link" href="{{ element_12.title_url }}" aria-label="{{ element_12.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-            {{ element_12.content }}             
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_12.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="data-protection-code-of-conduct">
+
+
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                      <h2 class="section-header-title" id="data-protection-code-of-conduct">
                     {{ element_13.title }}&nbsp;<a class="anchor-link" href="{{ element_13.title_url }}" aria-label="{{ element_13.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-             {{ element_13.content }} 
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_13.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="data-controller-and-contact-person">
+
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                      <h2 class="section-header-title" id="data-controller-and-contact-person">
                     {{ element_14.title }}&nbsp;<a class="anchor-link" href="{{ element_14.title_url }}" aria-label="{{ element_14.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-            {{ element_14.content }} 
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_14.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="jurisdiction">
+
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                      <h2 class="section-header-title" id="jurisdiction">
                     {{ element_15.title }}&nbsp;<a class="anchor-link" href="{{ element_15.title_url }}" aria-label="{{ element_15.title_url_text }}">#</a>
                     
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-             {{ element_15.content }} 
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_15.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
 
 <!-- cards -->
 
