--- a/arche-react/en/terms-of-use.html
+++ b/arche-react/en/terms-of-use.html
@@ -45,134 +45,235 @@
 </div>
 
 
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="deposition-of-resources">
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                        <h2 class="section-header-title" id="deposition-of-resources">
                     {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-            {{ element_3.content }}
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_3.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="access-to-and-use-of-the-resources">
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                    <h2 class="section-header-title" id="access-to-and-use-of-the-resources">
                     {{ element_4.title }}&nbsp;<a class="anchor-link" href="{{ element_4.title_url }}" aria-label="{{ element_4.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-            {{ element_4.content }}
-            
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_4.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="intellectual-property-rights-copyright">
+
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                    <h2 class="section-header-title" id="intellectual-property-rights-copyright">
                     {{ element_5.title }}&nbsp;<a class="anchor-link" href="{{ element_5.title_url }}" aria-label="{{ element_5.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-            {{ element_5.content }}
-            
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_5.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="citation">
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                   <h2 class="section-header-title" id="citation">
                     {{ element_6.title }}&nbsp;<a class="anchor-link" href="{{ element_6.title_url }}" aria-label="{{ element_6.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-            {{ element_6.content }}            
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_6.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="limitation-of-liability">
+
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                    <h2 class="section-header-title" id="limitation-of-liability">
                     {{ element_7.title }}&nbsp;<a class="anchor-link" href="{{ element_7.title_url }}" aria-label="{{ element_7.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-            {{ element_7.content }}
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_7.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <p class="section-header-title" id="data-protection-and-privacy-policy">
+
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                     <p class="section-header-title" id="data-protection-and-privacy-policy">
                     {{ element_8.title }}&nbsp;<a class="anchor-link" href="{{ element_8.title_url }}" aria-label="{{ element_8.title_url_text }}">#</a>
                 </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-            {{ element_8.content }}
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_8.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="jurdisction">
+
+
+
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                     <h2 class="section-header-title" id="jurdisction">
                     {{ element_9.title }}&nbsp;<a class="anchor-link" href="{{ element_9.title_url }}" aria-label="{{ element_9.title_url_text }}">#</a>
                 </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-            {{ element_9.content }}
+
+
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_9.content }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
+
 
 <!-- cards -->
 
