--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -20,10 +20,10 @@
             <div class="col-span-4 col-start-2">
                 <div class="grid grid-cols-6 gap-4">
                     <div class="col-span-3 ">
-                        <div class="text-center">  {{ element_1.content_top }}</div>
+                        <div class="text-center">  {{ element_1.content_left }}</div>
                     </div>
                     <div class="col-span-3 gap-6 ">
-                        <div class="flex flex-col gap-6"> {{ element_1.content_bottom }}</div>
+                        <div class="flex flex-col gap-6"> {{ element_1.content_right }}</div>
                     </div>
                 </div>
             </div>
