--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -20,7 +20,7 @@
             <div class="col-span-4 col-start-2">
                 <div class="grid grid-cols-6 gap-4">
                     <div class="col-span-3 ">
-                        <div class="text-center">  {{ element_1.content_left }}</div>
+                        <div class="">  {{ element_1.content_left }}</div>
                     </div>
                     <div class="col-span-3 gap-6 ">
                         <div class="flex flex-col gap-6"> {{ element_1.content_right }}</div>
@@ -37,7 +37,7 @@
             <div class="col-span-4 col-start-2">
                 <div class="w-full">
                     <div class="image-wrapper">
-                        <img src="/browser/themes/contrib/arche-theme-bs/images/common/bubble-line.png" alt="Bubble line" width="1600" height="36">
+                        <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="1600" height="36">
                     </div>
                 </div>
             </div>
