--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -32,11 +32,7 @@
 </div>
 
 <div class="w-full justify-center">
-    <div class="w-full flex justify-center">
-        
-                        <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="1600" height="36">
-        
-    </div>
+    <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="100%" height="36">
 </div>
 
 <!-- box 2 -->
