--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -80,114 +80,213 @@
 
 
 <!-- box 3 -->
-<div class="container white-bg-container maxw-980 mt-5">
-    <div class="row-fluid w-100">
-        <div class="col-lg-12">
-            <h5 class="section-header-title-small text-center">
+
+
+<div class="w-full flex justify-center mission-container-home">
+
+        <div class="grid grid-cols-6 gap-4">     
+
+            <div class="col-span-4 col-start-2">
+                <div class="w-full ">
+                    <div class="container mission-container">
+                        <div class="grid grid-cols-12">
+                            <h5 class="section-header-title-small text-center">
                 {{ element_3.title_small }}
             </h5>
             <h2 class="section-header-title text-center" id="access-to-digital-research-data">
                 {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
             </h2>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-6">
-            {{ element_3.content_left }}
+                        </div>
+                        <div class="grid grid-cols-12 gap-y-8">                            
+                            <div class="col-span-12 lg:col-span-6">
+                                <div class="text-center xl:text-left">
+                                     {{ element_3.content_left }}
+                                </div>
+                            </div>
 
-        </div>
-        <div class="col-lg-6">
-            {{ element_3.content_right }}
+                            <div class="col-span-12 lg:col-span-6 text-center">
+                               {{ element_3.content_right }}
+                            </div>
+                        </div>
 
+                        <div class="grid grid-cols-12 items-center mt-6 w-full">
+                            <div class="col-span-12 lg:col-span-6">
+                                <a
+                                    class="btn btn-arche-blue"
+                                    href="mailto:acdh-help@oeaw.ac.at"
+                                    >
+                                    More
+                                </a>
+                            </div>
+                            <div class="col-span-12 lg:col-span-6">
+                                <div class="container">
+                                    <div class="grid grid-cols-3 text-center items-center">
+                                        <div>
+                                            <img
+                                                class="max-w-full h-auto"
+                                                src="/browser/images/logos/mission-acdh-logo.png"
+                                                alt="..."
+                                                width="56"
+                                                height="62"
+                                                />
+                                        </div>
+                                        <div>
+                                            <img
+                                                class="max-w-full h-auto"
+                                                src="/browser/images/logos/mission-oaw-logo.png"
+                                                alt="..."
+                                                width="120"
+                                                height="59"
+                                                />
+                                        </div>
+                                        <div>
+                                            <img
+                                                class="max-w-full h-auto"
+                                                src="/browser/images/logos/mission-arche-logo.png"
+                                                alt="..."
+                                                width="120"
+                                                height="39"
+                                                />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </div>
-</div>
 
 
 <!-- cards -->
 
 
 
-<div class="container px-5 ">
-    <div class="row gx-5 align-items-center justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <p class="section-header-title-small">
-                    {{ cards.cards_header_title_small }}
-                </p>
-                <p class="section-header-title">
-                    {{ cards.cards_header_title }}
-                </p>
+<div class="w-full flex justify-center bg-white">
+    <div class="grid grid-cols-6 gap-4 w-full">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full">
+                <div class="my-12 text-center">
+                    <h5 class="section-header-title-small">
+                        {{ cards.cards_header_title_small }}
+                    </h5>
+                    <h2  class="section-header-title">
+                        {{ cards.cards_header_title }}             
+                    </h2>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="container maxw-980">
-    <div class="row-fluid">
-        <div class="container ">
-            <div class="row justify-content-center">
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-5">
-                    <div class="card h-100 shadow border-0 d-flex align-items-center justify-content-center">
-                        <img class="card-img-top cards-static-images img-fluid" src="{{ cards.card_1_image }}" alt="{{ cards.card_1_title }}" width="100%" height="100%">
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-start" href="/browser/collection-policy">{{ cards.card_1_title }}</a>
-                            </h5>
-                            <p class="card-text home-resources-text text-start">
-                                {{ cards.card_1_text }}
-                            </p>
-                            <p style="display:contents;">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_1_url }}">Show</a>
-                            </p>
+<div class="w-full flex justify-center cards-container">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2 container-w980">
+
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+                <div class="">
+                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ cards.card_1_image }}" alt="{{ cards.card_1_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4 h-full">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ cards.card_1_url }}">{{ cards.card_1_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left  h-full">
+                                    {{ cards.card_1_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_1_url }}">Show</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-5">
-                    <div class="card h-100 shadow border-0 d-flex align-items-center justify-content-center">
-                        <img class="card-img-top cards-static-images img-fluid" src="{{ cards.card_2_image }}" alt="{{ cards.card_2_title }}" width="100%" height="100%">
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-start" href="/browser/deposition-agreement">{{ cards.card_2_title }}</a>
-                            </h5>
-                            <p class="card-text home-resources-text text-start">
-                                {{ cards.card_2_text }}
-                            </p>
-                            <p style="display:contents;">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_2_url }}">Show</a>
-                            </p>
+                <div class="">
+                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ cards.card_2_image }}" alt="{{ cards.card_2_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4 h-full">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ cards.card_2_url }}">{{ cards.card_2_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left  h-full">
+                                    {{ cards.card_2_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_2_url }}">Show</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-5">
-                    <div class="card h-100 shadow border-0 d-flex align-items-center justify-content-center">
-                        <img class="card-img-top cards-static-images img-fluid" src="{{ cards.card_3_image }}" alt="{{ cards.card_3_title }}" width="100%" height="100%">
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-start" href="/browser/filenames-formats-metadata">{{ cards.card_3_title }}</a>
-                            </h5>
-                            <p class="card-text home-resources-text text-start">
-                                {{ cards.card_3_text }}
-                            </p>
-                            <p style="display:contents;">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_3_url }}">Show</a>
-                            </p>
+                <div class="">
+                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ cards.card_3_image }}" alt="{{ cards.card_3_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4 h-full">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ cards.card_3_url }}">{{ cards.card_3_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left  h-full">
+                                    {{ cards.card_3_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_3_url }}">Show</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-5">
-                    <div class="card h-100 shadow border-0 d-flex align-items-center justify-content-center">
-                        <img class="card-img-top cards-static-images img-fluid" src="{{ cards.card_4_image }}" alt="{{ cards.card_4_title }}" width="100%" height="100%">
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-start" href="/browser/faq">{{ cards.card_4_title }}</a>
-                            </h5>
-                            <p class="card-text home-resources-text text-start">
-                                {{ cards.card_4_text }}
-                            </p>
-                            <p style="display:contents;">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_4_url }}">Show</a>
-                            </p>
+                <div class="">
+                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ cards.card_4_image }}" alt="{{ cards.card_4_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4 h-full">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ cards.card_4_url }}">{{ cards.card_4_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left  h-full">
+                                    {{ cards.card_4_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_4_url }}">Show</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
