--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -1,7 +1,7 @@
 <div class="w-full justify-center">
     <div class="w-full flex justify-center">
         <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
+            <div class="col-span-12">
                 <div class="w-full">
                     <div class="my-12 text-center">
                         <h5 class="section-header-title-small">
@@ -49,19 +49,19 @@
             <div class="w-full ">
                 <div class="container mission-container">
                     <div class="grid grid-cols-12 gap-y-8">
-                        <div class="col-span-12">
-                             <h5 class="section-header-title-small text-center">
-                {{ element_2.title_small }}
-            </h5>
-            <h2 class="section-header-title text-center" id="institutional-affiliation-and-development-of-the-repository">
-                {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
-            </h2>
+                        <div class="col-span-12 text-center">
+                            <h5 class="section-header-title-small text-center">
+                                {{ element_2.title_small }}
+                            </h5>
+                            <h2 class="section-header-title text-center" id="institutional-affiliation-and-development-of-the-repository">
+                                {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
+                            </h2>
                         </div>
                         <div class="col-span-12 lg:col-span-6">
                             <div class="text-center xl:text-left">
-                                
+
                                 <p>
-                                   {{ element_2.content_left }}
+                                    {{ element_2.content_left }}
                                 </p>
                             </div>
                         </div>
@@ -84,63 +84,62 @@
 
 <div class="w-full flex justify-center mission-container-home">
 
-        <div class="grid grid-cols-6 gap-4">     
+    <div class="grid grid-cols-6 gap-4">     
 
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container mission-container">
-                        <div class="grid grid-cols-12">
-                            <h5 class="section-header-title-small text-center">
-                {{ element_3.title_small }}
-            </h5>
-            <h2 class="section-header-title text-center" id="access-to-digital-research-data">
-                {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
-            </h2>
-                        </div>
-                        <div class="grid grid-cols-12 gap-y-8">                            
-                            <div class="col-span-12 lg:col-span-6">
-                                <div class="text-center xl:text-left">
-                                     {{ element_3.content_left }}
-                                </div>
-                            </div>
-
-                            <div class="col-span-12 lg:col-span-6 text-center">
-                               {{ element_3.content_right }}
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container mission-container">
+                    <div class="grid grid-cols-12">
+                        <h5 class="section-header-title-small text-center">
+                            {{ element_3.title_small }}
+                        </h5>
+                        <h2 class="section-header-title text-center" id="access-to-digital-research-data">
+                            {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
+                        </h2>
+                    </div>
+                    <div class="grid grid-cols-12 gap-y-8">                            
+                        <div class="col-span-12 lg:col-span-6">
+                            <div class="text-center xl:text-left">
+                                {{ element_3.content_left }}
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-12 items-center mt-6 w-full">
-                            
-                            <div class="col-span-12 lg:col-span-6">
-                                <div class="container">
-                                    <div class="grid grid-cols-3 text-center items-center">
-                                        <div>
-                                            <img
-                                                class="max-w-full h-auto"
-                                                src="/browser/images/logos/mission-acdh-logo.png"
-                                                alt="..."
-                                                width="56"
-                                                height="62"
-                                                />
-                                        </div>
-                                        <div>
-                                            <img
-                                                class="max-w-full h-auto"
-                                                src="/browser/images/logos/mission-oaw-logo.png"
-                                                alt="..."
-                                                width="120"
-                                                height="59"
-                                                />
-                                        </div>
-                                        <div>
-                                            <img
-                                                class="max-w-full h-auto"
-                                                src="/browser/images/logos/mission-arche-logo.png"
-                                                alt="..."
-                                                width="120"
-                                                height="39"
-                                                />
-                                        </div>
+                        <div class="col-span-12 lg:col-span-6 text-center">
+                            {{ element_3.content_right }}
+                        </div>
+                    </div>
+
+                    <div class="grid grid-cols-12 items-center mt-6 w-full">
+
+                        <div class="col-span-12 lg:col-span-6">
+                            <div class="container">
+                                <div class="grid grid-cols-3 text-center items-center">
+                                    <div>
+                                        <img
+                                            class="max-w-full h-auto"
+                                            src="/browser/images/logos/mission-acdh-logo.png"
+                                            alt="..."
+                                            width="56"
+                                            height="62"
+                                            />
+                                    </div>
+                                    <div>
+                                        <img
+                                            class="max-w-full h-auto"
+                                            src="/browser/images/logos/mission-oaw-logo.png"
+                                            alt="..."
+                                            width="120"
+                                            height="59"
+                                            />
+                                    </div>
+                                    <div>
+                                        <img
+                                            class="max-w-full h-auto"
+                                            src="/browser/images/logos/mission-arche-logo.png"
+                                            alt="..."
+                                            width="120"
+                                            height="39"
+                                            />
                                     </div>
                                 </div>
                             </div>
@@ -149,8 +148,9 @@
                 </div>
             </div>
         </div>
-
     </div>
+
+</div>
 
 
 <!-- cards -->
