--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -51,10 +51,10 @@
                     <div class="grid grid-cols-12 gap-y-8">
                         <div class="grid grid-cols-6 gap-4">
                             <div class="col-span-12">
-                                <h5 class="section-header-title-small text-center">
+                                <h5 class="section-header-title-small !text-center">
                                     {{ element_2.title_small }}
                                 </h5>
-                                <h2 class="section-header-title text-center" id="institutional-affiliation-and-development-of-the-repository">
+                                <h2 class="section-header-title !text-center" id="institutional-affiliation-and-development-of-the-repository">
                                     {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
                                 </h2>
                             </div>
