--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -32,7 +32,7 @@
 </div>
 
 <div class="w-full flex justify-center bg-white">
-    <div class="w-full bubble-line-container pt-2">
+    <div class="w-full bubble-line-container pt-5 pb-5">
         <div class="image-wrapper w-full">
             <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="100%" height="36px">
         </div>
@@ -50,7 +50,7 @@
                 <div class="container mission-container">
                     <div class="grid grid-cols-12 gap-y-8">
                         <div class="grid grid-cols-6 gap-4">
-                            <div class="col-span-12">
+                            <div class="grid col-span-12 !text-center">
                                 <h5 class="section-header-title-small !text-center">
                                     {{ element_2.title_small }}
                                 </h5>
