--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -111,7 +111,7 @@
                         </div>
                     </div>
 
-                    <div class="grid grid-cols-12 items-center mt-6 w-full">
+                    <!--<div class="grid grid-cols-12 items-center mt-6 w-full">
 
                         <div class="col-span-12 lg:col-span-6">
                             <div class="container">
@@ -146,7 +146,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
