--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -53,11 +53,11 @@
                         <div class="grid grid-cols-6 gap-4">
                             <div class="col-span-12">
                                 <div class="w-full">
-                                    <div class="my-12 text-center">
+                                    <div class="my-12 flex justify-center">
                                         <h5 class="section-header-title-small">
                                             {{ element_2.title_small }}
                                         </h5>
-                                        <h2 class="section-header-title !text-center" id="institutional-affiliation-and-development-of-the-repository">
+                                        <h2 class="section-header-title flex justify-center" id="institutional-affiliation-and-development-of-the-repository">
                                             {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
                                         </h2>
                                     </div>
