--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -53,8 +53,8 @@
                         <div class="grid grid-cols-6 gap-4">
                             <div class="col-span-12">
                                 <div class="w-full">
-                                    <div class="my-12 flex justify-center">
-                                        <h5 class="section-header-title-small">
+                                    <div class="">
+                                        <h5 class="section-header-title-small flex justify-center items-center">
                                             {{ element_2.title_small }}
                                         </h5>
                                         <h2 class="section-header-title flex justify-center" id="institutional-affiliation-and-development-of-the-repository">
