--- a/arche-react/en/collection-policy.html
+++ b/arche-react/en/collection-policy.html
@@ -211,7 +211,7 @@
     </div>
 </div>
 
-<div class="w-full flex justify-center cards-container">
+<div class="w-full flex justify-center cards-container static-page">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2 container-w980">
 
