--- a/arche-react/en/deposition-agreement.html
+++ b/arche-react/en/deposition-agreement.html
@@ -2,7 +2,7 @@
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
             <div class="w-full ">
-                <div class="container-w980">
+                <div class="container-w980 bg-white p-2">
                     <div class="flex flex-col gap-8">
                         <p>
                             <strong>{{ element_1.intro }}</strong>
@@ -134,7 +134,7 @@
 
 
 
-<div class="w-full flex justify-center mb-[100px]">
+<div class="w-full flex justify-center">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
             <div class="w-full ">
