--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -1,43 +1,40 @@
-<div class="w-full justify-center">
-    <div class="w-full flex justify-center">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-12">
-                <div class="w-full">
-                    <div class="my-12 text-center">
-                        <h5 class="section-header-title-small">
-                            {{ element_1.title_small }}
-                        </h5>
-                        <h2 class="section-header-title" id="preservation-and-dissemination-of-digital-research-data">
-                            {{ element_1.title }}&nbsp;<a class="anchor-link" href="{{ element_1.title_url }}" aria-label="{{ element_1.title_url_text }}">#</a>
-                        </h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="w-full flex justify-center">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="grid grid-cols-6 gap-4">
-                    <div class="col-span-3 ">
-                        <div class="">  {{ element_1.content_left }}</div>
-                    </div>
-                    <div class="col-span-3 gap-6 ">
-                        <div class="flex flex-col gap-6"> {{ element_1.content_right }}</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>    
-</div>
+<section class="bg-white">
+    <div class="mx-auto max-w-6xl px-6 py-12">
+        <!-- Top label -->
+        <div class="text-center">
+            <p class="text-sm font-semibold tracking-wider text-sky-600">
+                {{ element_1.title_small }}
+            </p>
 
-<div class="w-full flex justify-center bg-white">
-    <div class="w-full bubble-line-container pt-5 pb-5">
-        <div class="image-wrapper w-full">
+            <!-- Main title -->
+            <h1 class="section-header-title" id="preservation-and-dissemination-of-digital-research-data">
+                {{ element_1.title }}&nbsp;<a class="anchor-link" href="{{ element_1.title_url }}" aria-label="{{ element_1.title_url_text }}">#</a>
+            </h1>
+        </div>
+
+        <!-- Two-column intro text -->
+        <div class="mt-10 grid grid-cols-1 gap-10 md:grid-cols-2">
+            <div class="space-y-5 text-gray-600 leading-relaxed">
+                {{ element_1.content_left }}
+            </div>
+        </div>
+
+        <!-- Video section -->
+        <div class="mt-14 grid grid-cols-1 gap-12 lg:grid-cols-2">
+            <div class="space-y-5 text-gray-600 leading-relaxed">
+                {{ element_1.content_right }}
+            </div>
+
+        </div>
+
+        <!-- Optional: wave-ish bottom spacing like the screenshot -->
+        <div class="mt-14 h-6 w-full opacity-20"> 
             <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="100%" height="36px">
         </div>
     </div>
-</div>
+</section>
+
+
 
 <!-- box 2 -->
 
