--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -10,7 +10,7 @@
       </h2>
     </div>
 
-    <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <div class="grid grid-cols-2 gap-6">
       <div>{{ element_1.content_left }}</div>
       <div>{{ element_1.content_right }}</div>
     </div>
