--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -10,9 +10,13 @@
       </h2>
     </div>
 
-    <div class="grid grid-cols-2 gap-6">
-      <div>{{ element_1.content_left }}</div>
-      <div>{{ element_1.content_right }}</div>
+    <div class="grid grid-cols-2 gap-6 border border-red-500">
+      <div class="border border-blue-500">
+        {{ element_1.content_left }}
+      </div>
+      <div class="border border-green-500">
+          {{ element_1.content_right }}
+      </div>
     </div>
   </div>
 </div>
