--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -1,5 +1,19 @@
 <div class="w-full">
   <div class="mx-auto w-full max-w-6xl px-6">
+<div class="grid grid-cols-2 gap-6 border border-red-500">
+      <div class="border border-blue-500">
+        LEFT
+      </div>
+
+      <div class="border border-green-500">
+        RIGHT
+      </div>
+    </div>
+      </div>
+    </div>
+
+<div class="w-full">
+  <div class="mx-auto w-full max-w-6xl px-6">
     <div class="my-12 text-center">
       <h5 class="section-header-title-small">
         {{ element_1.title_small }}
